# slack-task-worker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  NOTION_INTEGRATION_FIX.md  NOTION_SETUP.md  README.md  SLACK_SETUP.md  main.py  pyproject.toml  run_local.sh  setup_ngrok.sh
admin/: deploy_mapping_to_gcs.py  setup_database_mapping.py  setup_user_mapping.py  update_user_mapping.py
docs/: CLOUD_RUN_DEPLOY.md  CLOUD_RUN_SLACK_AUTH.md  DYNAMIC_USER_MAPPING.md  GOOGLE_CALENDAR_SETUP.md  NOTION_SETUP.md  PROJECT_STRUCTURE.md  SLACK_EMAIL_FIX.md  SLACK_SETUP.md  SLACK_TROUBLESHOOTING.md  admin_metrics_notion_guide.md  approval_reminder_feature.md  comprehensive_system_audit.md  concurrency_overview.md  notion_properties.md  notion_property_setup.md  slack_presentation_architecture.md  thread_management_design.md
scripts/: run_local.sh
setup/: slack-app-manifest.json
src/: main.py
src/application/dto/: task_dto.py
src/application/services/: calendar_task_service.py  task_event_notification_service.py  task_metrics_service.py  task_service.py  user_mapping_service.py
src/domain/entities/: calendar_task.py  notion_user.py  slack_user.py  task.py  (+3 more)
src/services/: ai_service.py
src/utils/: concurrency.py  text_converter.py
tests/: check_database_structure.py  check_task_database_properties.py  debug_notion_users.py  fix_notion_status.py  investigate_guest_users.py  notion_guest_search.py  test_complete_workflow.py  test_guest_assignment.py  test_notion.py
tests/domain/: test_task_metrics_domain_service.py
tests/presentation/: test_slack_reminder_logic.py
(+32 files in other folders)
